# hivepulse-api/docs/swagger.yaml
@@ -50,6 +50,25 @@ definitions:
       uptime_pct:
         type: number
     type: object
+  handler.logResponse:
+    properties:
+      channel_id:
+        type: string
+      error_msg:
+        type: string
+      event:
+        type: string
+      id:
+        type: integer
+      monitor_id:
+        type: string
+      monitor_name:
+        type: string
+      sent_at:
+        type: string
+      status:
+        type: string
+    type: object
   handler.loginRequest:
     properties:
       email:
@@ -713,6 +732,36 @@ paths:
       summary: Assign a tag to a monitor
       tags:
       - monitors
+  /notification-channels/{id}/logs:
+    get:
+      parameters:
+      - description: Channel ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              items:
+                $ref: '#/definitions/handler.logResponse'
+              type: array
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - Bearer: []
+      summary: List notification logs for a channel
+      tags:
+      - notification-channels
   /s/{slug}:
     get:
       parameters:
